licensing, rake and readme cleanup